Phani | A-1204913361798569 | Fix DatePicker Alignment in notes modal(#653)

--- a/ui/app/styles/ot/_otWeeklyCalendar.scss
+++ b/ui/app/styles/ot/_otWeeklyCalendar.scss
@@ -109,9 +109,17 @@
         display: inline-block;
         color: #000;
       }
+      .date-selector{
+        display: flex;
+        gap: 20px;
+        > div {
+          width: 45%;
+          display: inline-block
+        }
+      }
       button{
         height: 64px;
-        width: 50%;
+        min-width: 50%;
         color: white;
         border: none;
         border-radius: 0;
